Fix sign up screen background overflow + Add password reset screen

--- a/app/assets/stylesheets/devise/common.scss
+++ b/app/assets/stylesheets/devise/common.scss
@@ -4,10 +4,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
 }
 
 .field label, .short-field label {
     margin-left: 15px;
+    margin-bottom: 0px;
     font-weight: 500;
 }
 
