--- a/app/assets/stylesheets/devise/passwords.scss
+++ b/app/assets/stylesheets/devise/passwords.scss
@@ -1,4 +1,4 @@
-.signup .form {
+.password .form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,15 +12,14 @@
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
 }
 
-.signup .form h2 {
+.password .form h2 {
     font-weight: normal;
     font-size: 45px;
     line-height: 92px;
     color: black;
 }
 
-.signup input.data {
-    margin-bottom: 15px;
+.password input {
     box-sizing: border-box;
     border: 1px solid #000000;
     border-radius: 15px;
@@ -31,43 +30,29 @@
     outline-style: none;
 }
 
-.signup .short-field input.data{
-    margin-bottom: 20px;
-    width: 280px;
-}
-
-.signup .fields {
-    display: flex;
-    justify-content: space-between;
-}
-
-.signup .options {
-    display: flex;
-}
-
-.signup .links {
-    margin-left: 10px;
-}
-
-.signup .actions {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.password .links{
+    flex: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-bottom: 12px;
 }
 
-.signup .actions input{
+.password .links a {
+    transform: translateX(-50%);
+    margin-left: 10%;
+}
+
+.password .actions input{
     outline: none;
     background-color: #536DFE;
     color: #FFE0E0;
     font-size: 20px;
     font-weight: 500;
-    width: 200px;
-    height: 50px;
     border-radius: 35px;
     transition: 400ms;
 }
 
-.signup .actions input:hover{
+.password .actions input:hover {
     background-color: #4B61DD;
 }
